--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,9 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+*.uasset
+
+Content/StarterContent/Maps/StarterMap_BuiltData.uasset
+Content/UI/MainMenu/HostMenu.uasset
+Content/UI/MainMenu/MainMenu.uasset
